# goit-ds-hw-03

./: README.md  authors.json  create.py  create_db.py  main.py  pyproject.toml  scrape_from_url.py
